# thruster_optimization

./: CITATION.bib  LICENSE  README.md  defs.py  pyproject.toml  ring_magnetic_field.ipynb  ring_magnetic_field.py  taylor_expansion.ipynb  test_defs.py
.github/workflows/: python-package.yml
